<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/title_segunda_tela"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="29dp"
            android:text="@string/salario_bruto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultadoSalarioBruto"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="28dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="102dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/inss"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/resultadoInss"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/resultadoSalarioBruto" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="102dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/irrf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/resultadoIrrf"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/resultadoInss" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="102dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/outros_descontos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/resultadoOutrosDescontos"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/resultadoIrrf" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/salario_liquido"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/resultadoSalarioLiquido"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="82dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/resultadoOutrosDescontos" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/descontos"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/resultadoDescontos"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/resultadoSalarioLiquido" />

        <Button
            android:id="@+id/voltar"
            android:layout_width="192dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:text="Voltar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>